gcc/testsuite/rust/rustc/ui/error-codes/E0600.rs
fn main() {
    !"a"; // { dg-error ".E0600." "" { target *-*-* } }
}

